--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
+    "mime": "^3.0.0",
     "mongodb": "^4.9.1"
   },
   "engines": {
